# completion-service

./: .gitignore  completion-service.cabal  completion.cabal  readme.md
Completion/: Completer.hs  Main.hs  Service.hs  Types.hs
src/Completion/: Config.hs  Main.hs
