name:                completion-service
version:             0.1.0.0
synopsis:            Text completion as a service
description:         Text completion as a service
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+completion-service@gmail.com>
homepage:            http://github.com/jotrk/completion-service/
bug-reports:         http://github.com/jotrk/completion-service/issues

category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/completion-service.git

executable completion-service
  main-is:           Completion/Main.hs

  build-depends:     base           >= 4.7  && < 4.8,
                     completion-engine >= 0.1  && < 0.2,
                     bytestring     >= 0.10 && < 0.11,
                     rest-service   >= 0.1  && < 0.2,
                     scotty         >= 0.9  && < 0.10,
                     warp           >= 3.0  && < 3.1

  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
